Battery turns red when low, fixed inconsistent spacing between bars in signal indicator

--- a/teleop-vue/src/components/BatteryIndicator/BatteryIndicator.scss
+++ b/teleop-vue/src/components/BatteryIndicator/BatteryIndicator.scss
@@ -49,8 +49,8 @@
   visibility: hidden;
 }
 
-.charging {
-  background: green;
+.low {
+  background: red;
 }
 
 .percentage-box {
